# rabbit-client

./: .codeclimate.yml  .coveragerc  .dockerignore  .editorconfig  .flake8  .tool-versions  .travis.yml  Dockerfile  MANIFEST.in  Makefile  README.md  conftest.py  docker-compose.yml  docker.yml  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_client.py  test_client2py  test_client_single.py  test_polling.py  test_polling_aiohttp.py  test_producer.py  test_transaction.py
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
docs/: 1.-introduction.md  1.-overview.md  1.-publish-subscribe.md  2.-polling-publisher.md  2.-publish-subscribe.md  3.-development.md  3.-polling-publisher.md  3.-publish-subscribe.md  4.-command-line.md  4.-development.md  5.-development.md  6.-faq.md  7.-error_strategies.md  command-line.md  contributing.md  development.md  error_strategies.md  faq.md  index.md  overview.md  polling-publisher.md  publish-subscribe.md  pull_request_template.md  rabbit-client-workflow-polling.xml  rabbit-client-workflow.xml
example/: docker-compose.yml
example/migrations/: alembic.ini  env.py
example/migrations/versions/: eae5e199b5bc_create_event_table.py
rabbit/: __init__.py  __main__.py  _wait.py  alembic.ini  background_tasks.py  callback.py  client.py  config.py  dlx.py  engine.py  event.py  exceptions.py  exchange.py  handler.py  job.py  logger.py  observer.py  polling.py  publish.py  queue.py  setup.py  subscribe.py  task.py  utils.py
rabbit/cli/: __init__.py  consumer.py  producer.py  publisher.py  pubsub.py
rabbit/migrations/: env.py
rabbit/migrations/versions/: eae5e199b5bc_create_event_table.py
rabbit/task/: __init__.py  abc.py  process.py  standard.py
rabbit/tlog/: __init__.py  core.py  db.py  event.py  event_persist.py  migration.py  queries.py
rabbit/tlog/migrations/: alembic.ini
rabbit/tlog/migrations/versions/: eae5e199b5bc_create_event_table.py
tests/: conftest.py  test_sample_job.py
tests/integration/: conftest.py  setup.py  test_client.py  test_client_integration.py  test_db_integration.py  test_dlx_integration.py  test_polling_integration.py  test_publish_integration.py  test_subscribe_integration.py
tests/unit/: alembic.ini  test_background_tasks.py  test_cli.py  test_cli_import.py  test_client.py  test_config.py  test_db.py  test_dlx.py  test_event.py  test_event_persist.py  test_exceptions.py  test_exchange.py  test_job.py  test_jobs.py  test_migration.py  test_observer.py  test_polling.py  test_publish.py  test_publisher_cli.py  test_queue.py  test_sample_job.py  test_subscribe.py  test_task.py  test_wait.py
tests/unit/migrations/versions/: eae5e199b5bc_create_event_table.py
