[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
exclude = venv
          __pycache__
          *.pyc
          __init__.py
          setup.py
          rabbit/migrations
          tests/unit/migrations
ignore = E501 # line too long
verbose = 2
doctests = True
show_source = True
statistics = True
count = True

[mypy]
files = rabbit
show_error_context = True
verbosity = 0
ignore_missing_imports = True
warn_unused_configs = True
warn_return_any = True
warn_unused_ignores = True
warn_unreachable = True
no_implicit_optional = True

[tox:tox]
envlist = py{38,39}

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals = make
commands =
    make ci
