[bdist_wheel]
universal = 1

[metadata]
name = rabbit-client
version = attr:  rabbit.__version__
author = alexandre menezes
author_email = alexandre.fmenezes@gmail.com
description = async rabbit client
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
url = https://github.com/amenezes/rabbit-client
project_urls =
  Documentation = https://rabbit-client.amenezes.net
  Code = https://github.com/amenezes/rabbit-client
  Issue tracker = https://github.com/amenezes/rabbit-client/issues
  Changes = https://github.com/amenezes/rabbit-client/releases
classifiers =
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Framework :: AsyncIO
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Object Brokering
  Topic :: System :: Distributed Computing
keywords = "asyncio", "aioamqp", "amqp", "rabbitmq"

[options]
packages = find:
install_requires =
  aioamqp >= 0.15.0
  attrs >= 19.1.0
python_requires = >= 3.8.0
include_package_data = True

[options.extras_require]
cli = click>=8.1.3; rich>=12.6.0
all = click>=8.1.3; rich>=12.6.0


[options.entry_points]
console_scripts =
  rabbit = rabbit.__main__:cli

[flake8]
exclude = venv
          __pycache__
          *.pyc
          __init__.py
ignore = E501, W503
verbose = 2
doctests = True
show_source = True
statistics = True
count = True

[tool:pytest]
testpaths = tests
asyncio_mode = auto

[mypy]
files = rabbit
show_error_context = True
verbosity = 0
ignore_missing_imports = True
warn_unused_configs = True
warn_return_any = True
warn_unused_ignores = True
warn_unreachable = True
no_implicit_optional = True

[tox:tox]
envlist = py{38,39,310,311}

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals = make
commands =
    make ci

[coverage:run]
branch = True
omit = **__init__.py**
       rabbit/__version__.py
       rabbit/migrations/*
       tests/unit/migrations/*

[report]
show_missing = True
sort = Miss
precision = 2
exclude_lines = logging.info
                logging.debug
                logging.warn
                logging.error

[paths]
source = rabbit/

[html]
directory = .

[xml]
output = coverage.xml
